add security annotations and some unit tests, reformat files and optimize imports